fixed width for non-overlay scrollbars
When non-overlay scrollbar changes size, it shrinks content.
Nothing serious, sometimes not good.

--- a/gtk-3.22/gtk-widgets.css
+++ b/gtk-3.22/gtk-widgets.css
@@ -1754,11 +1754,11 @@ scrollbar.vertical slider {
     min-width: 3px;
 }
 
-scrollbar.horizontal:hover slider {
+scrollbar.overlay-indicator.horizontal:hover slider {
     min-height: 8px;
 }
 
-scrollbar.vertical:hover slider {
+scrollbar.overlay-indicator.vertical:hover slider {
     min-width: 8px;
 }
 
